--- a/app/design/frontend/creo/default/template/extensions/collections/men.phtml
+++ b/app/design/frontend/creo/default/template/extensions/collections/men.phtml
@@ -53,7 +53,7 @@ $_attrbiuteCollection = $this->getLoadedAttributeCollection();
 </ul>
 </div>
 </div>
-////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
 
 <?php
 $_productCollection = $this->getLoadedProductCollection();
@@ -68,20 +68,32 @@ $_helper = $this->helper('catalog/output');
         <?php // List mode  ?>
         <?php if ($this->getMode() != 'grid'): ?>
             <?php $_iterator = 0; ?>
-            <ol class="products-list products-grid" id="products-list">
+            <div class="row">
+            <div class="col col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            <h3 class="inline-h"><span>DESIGN CATEGORIES</span></h3>
+            <div class="carousel-creo carousel4 trends-carousel">
+            <div class="mask">
+            <div class="slideset" id="products-list">
+            <!-- <ol class="products-list products-grid" id="products-list"> -->
             <?php foreach ($_productCollection as $_product): ?>
-                    <li class="item<?php if (($i - 1) % $_columnCount == 0): ?> first<?php elseif ($i % $_columnCount == 0): ?> last<?php endif; ?>">
+                    <div class="slide item<?php if (($i - 1) % $_columnCount == 0): ?> first<?php elseif ($i % $_columnCount == 0): ?> last<?php endif; ?>">
                         <div class="list_product_img">
-                            <a  href="<?php echo $_product->getProductUrl() ?>" title="<?php echo $this->stripTags($this->getImageLabel($_product, 'small_image'), null, true) ?>" class="product-image image-area"><img src="<?php echo $this->helper('catalog/image')->init($_product, 'small_image')->resize(480, 650); ?>" width="414" height="500" alt="<?php echo $this->stripTags($this->getImageLabel($_product, 'small_image'), true, true) ?>" />
+                            <a  href="<?php echo $_product->getProductUrl() ?>" title="<?php echo $this->stripTags($this->getImageLabel($_product, 'small_image'), null, true) ?>" class="product-image image-area"><img src="<?php echo $this->helper('catalog/image')->init($_product, 'small_image')->resize(480, 650); ?>" width="414" height="500" alt="<?php echo $this->stripTags($this->getImageLabel($_product, 'small_image'), true, true) ?>" ></a>
                         </div>
                         <div class="text-area">
                             <h3><a href="<?php echo $_product->getProductUrl() ?>" title="<?php echo $this->stripTags($_product->getName(), null, true) ?>"><?php echo $_helper->productAttribute($_product, $_product->getName(), 'name') ?></a></h3>
                             <span class="price"><?php echo Mage::helper('core')->currency($_product->getFinalPrice(), true, false); ?></span>
 
                         </div>
-                    </li>
+                    </div>
         <?php endforeach; ?>
-            </ol>
+            <!-- </ol> -->
+            </div>
+            </div>
+            <a class="btn-prev" href="#"><i class="icon-angle-left"></i></a>
+            <a class="btn-next" href="#"><i class="icon-angle-right"></i></a>
+            </div>
+            </div>
             <script type="text/javascript">decorateList('products-list', 'none-recursive')</script>
 
     <?php else: ?>
