mobile theme navigation under developemnt

--- a/app/design/frontend/creo_mobile/default/template/page/html/footer.phtml
+++ b/app/design/frontend/creo_mobile/default/template/page/html/footer.phtml
@@ -25,9 +25,12 @@
  */
 ?>
 
+<div class="footer_termsconditions"> Terms & conditions @ creo-room </div>
+<style>
+.footer_termsconditions { float: left; width: 100%; text-align: center; padding: 10px 0;}
+</style>
 
-
-<footer id="footer">
+<?php /*?><footer id="footer">
 					<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 							<div class="right-area">
@@ -67,7 +70,7 @@
 							</div>
 						</div>
 					</div>
-				</footer>
+				</footer><?php */?>
 
 
         
