--- a/skin/frontend/creo_mobile/default/style.css
+++ b/skin/frontend/creo_mobile/default/style.css
@@ -1036,3 +1036,68 @@ dl { margin: 0 0 10px; }
 .page-print .subtitle { margin-bottom: 99px; }
 .page-print .buttons-set button { display: none; }
 }
+
+
+
+
+
+
+
+
+
+.homepage_navigation_middle{padding: 0;}
+.homepage_navigation_middle .panel.panel-default{
+	border-radius: 0;
+	margin: 0;
+	border-width: 0 0 2px;
+	border-color: #fff;
+	border-style: solid;
+}
+.homepage_navigation_middle .panel-heading{
+	border-radius: 0;
+	padding: 0;
+}
+.homepage_navigation_middle .panel-heading a{
+	padding: 6px 45px 4px 32px;
+	position: relative;
+}
+.homepage_navigation_middle .panel-heading a:before{
+	width: 0;
+	height: 0;
+	border-style: solid;
+	border-width: 7px 6px 0;
+	border-color: #ffffff transparent transparent;
+	position: absolute;
+	top: 50%;
+	right: 27px;
+	margin: -3px 0 0;
+	content: '';
+}
+.homepage_navigation_middle .panel-heading a[aria-expanded="true"]:before{
+	border-width: 0 6px 7px 6px;
+	border-color: transparent transparent #fff;
+}
+.homepage_navigation_middle .panel-title{
+	font-size: 18px;
+	line-height: 20px;
+	margin: 0;
+	text-transform: uppercase;
+}
+.homepage_navigation_middle .panel-title a{color: #fff;}
+.homepage_navigation_middle .panel-collapse a{
+	display: block;
+	font-size: 16px;
+	line-height: 18px;
+	text-transform: uppercase;
+	color: #000;
+	background: #fff;
+	border-top: 1px solid #999;
+	padding: 3px 32px 3px;
+}
+.homepage_navigation_middle .panel-collapse a:first-child{border-top: 0;}
+
+
+
+
+
+
