taking latest code

--- a/skin/frontend/creo_mobile/default/style.css
+++ b/skin/frontend/creo_mobile/default/style.css
@@ -1044,7 +1044,7 @@ dl { margin: 0 0 10px; }
 
 
 
-
+/*creo mobile styling*/
 .homepage_navigation_middle{padding: 0;}
 .homepage_navigation_middle .panel.panel-default{
 	border-radius: 0;
