Creo mobile category page styling

--- a/skin/frontend/creo_mobile/default/css/custom.sami.css
+++ b/skin/frontend/creo_mobile/default/css/custom.sami.css
@@ -543,7 +543,7 @@ div.fme-filter a.fme_layered_attribute {
 }
 
 .breadcrumb1 {
-    margin-top:-30px;
+    margin-top:0;
 }
 
 #fme_layered_styles li {
