add collections in creo mobile template

--- a/app/design/frontend/creo_mobile/default/template/extensions/sellers/bestseller.phtml
+++ b/app/design/frontend/creo_mobile/default/template/extensions/sellers/bestseller.phtml
@@ -40,6 +40,7 @@ $_helper = $this->helper('catalog/output');
     <p class="note-msg"><?php echo $this->__('There are no products matching the selection.') ?></p>
 <?php else: ?>
     <div class="category-products">
+    <div class="row"><div class="col col-lg-12 col-md-12 col-sm-12 col-xs-12"><h2 class="cph">Best Sellers</h2></div></div>
     <?php //echo $this->getToolbarHtml() ?>
         <?php // List mode  ?>
         <?php if ($this->getMode() != 'grid'): ?>
