--- a/app/design/frontend/creo_mobile/default/template/page/html/topmenu/renderer.phtml
+++ b/app/design/frontend/creo_mobile/default/template/page/html/topmenu/renderer.phtml
@@ -287,6 +287,22 @@ endforeach;
         
     </div>
 </li>
+<li <?php if(in_array("collections",$parent_cat_array)) {
+                    echo'class="active"';
+                } ?>> <a href="<?php echo Mage::getBaseUrl() . "collections/index/categories" ?>">COLLECTIONS</a>
+    <div class="drop">
+        <div class="links-area">
+            <div class="links-frame">
+ 				<ul class="links">
+ <li> <a href="<?php echo Mage::getBaseUrl() . "collections/index/men" ?>"><strong> Men </strong> </a></li>
+                </ul>
+			    <ul class="links">
+   <li> <a href="<?php echo Mage::getBaseUrl() . "collections/index/women" ?>"><strong> Women </strong> </a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</li>
 <!--<li <?php if (in_array("categories",$parent_cat_array)) {
                     echo'class="active"';
                 } ?>> <a href="javascript:void(0)">CATEGORIES</a>
