--- a/skin/frontend/creo_mobile/default/custom.css
+++ b/skin/frontend/creo_mobile/default/custom.css
@@ -229,7 +229,7 @@
     border-color: #eee;
     outline:none !important;
     border-style: solid;
-    border-width: 0 0 0 4px;
+    border-width: 0;
     color: #aaa;
     margin: 0;
     overflow: hidden;
