--- a/app/design/frontend/creo_mobile/default/template/page/html/topmenu/customcategories.phtml
+++ b/app/design/frontend/creo_mobile/default/template/page/html/topmenu/customcategories.phtml
@@ -51,6 +51,27 @@
      
     </div>
     <?php
+	if( $_category->getName() == 'Caps' ){
+	?> 
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h4 class="panel-title">
+          <a data-toggle="collapse" data-parent="#accordion" 
+          href="#collapse5">
+		  Collections
+          </a>
+        </h4>
+      </div>
+      
+      <div id="collapse5" class="panel-collapse collapse">
+        <a href="<?php echo Mage::getBaseUrl() . "collections/index/men" ?>">men</a>
+        <a href="<?php echo Mage::getBaseUrl() . "collections/index/women" ?>">women</a>
+      </div>
+      
+     
+    </div>
+    <?php
+		}
           } }
           ?>
   </div> 
