pull menu fixed

--- a/app/design/frontend/creo_mobile/default/template/page/html/topmenu/renderer.phtml
+++ b/app/design/frontend/creo_mobile/default/template/page/html/topmenu/renderer.phtml
@@ -289,7 +289,9 @@ endforeach;
 </li>
 <li <?php if(in_array("collections",$parent_cat_array)) {
                     echo'class="active"';
-                } ?>> <a href="<?php echo Mage::getBaseUrl() . "collections/index/categories" ?>">COLLECTIONS</a>
+                } ?>>
+                <!-- <a href="<?php //echo Mage::getBaseUrl() . "collections/index/categories" ?>">COLLECTIONS</a> -->
+                <a>COLLECTIONS</a>
     <div class="drop">
         <div class="links-area">
             <div class="links-frame">
