--- a/skin/frontend/creo_mobile/default/style.css
+++ b/skin/frontend/creo_mobile/default/style.css
@@ -479,13 +479,12 @@ width: 29px; height: 19px; position: absolute; top: 0; left: 0; content: ''; }
 .cart-top-area .btn-holder a:first-child:before { display: none; }
 .cart-top-area .btn-holder a:hover:before { border-color: transparent transparent #000; }
 .cart-top-area .btn-holder a:hover { opacity: 0.8; background: #000; color: #fff; border-color: #000; text-decoration: none; }
-.cart-top-area .btn-holder a:first-child { margin: 0 2px 0 0; color: #aaa; background: #fff; border-width: 0 0 0 2px; border-style: solid; border-color: #eee; overflow: hidden; padding: 0; }
-.cart-top-area .btn-holder a:first-child .span1 { transform: skewX(-25deg); -moz-transform: skewX(-25deg); -ms-transform: skewX(-25deg); -webkit-transform: skewX(-25deg); border: 2px solid #eee; padding: 6px; display: block; width: 100%; margin-left: -12px; }
-.cart-top-area .btn-holder a:first-child .span2 { display: inline-block; transform: skewX(25deg); -moz-transform: skewX(25deg); -webkit-transform: skewX(25deg); -ms-transform: skewX(25deg); padding: 0 15px; color: #000; }
+.cart-top-area .btn-holder a:first-child { margin: 0 2px 4px 0; color: #aaa; background: #fff; border-width: 0 0 0 2px; border-style: solid; border-color: #eee; overflow: hidden; padding: 0; }
+.cart-top-area .btn-holder a:first-child .span1 {border:2px solid #eee;padding:6px 3px; display: block; width: 100%;}
+.cart-top-area .btn-holder a:first-child .span2 {display: inline-block; padding:0 15px; color: #000; }
 .cart-top-area .btn-holder a:first-child:hover .span1 { background: #f16167; border-color: #f16167; }
 .cart-top-area .btn-holder a:first-child:hover { background: none; color: #000; opacity: 1; border-color: #f16167; }
-.cart-top-area { padding-bottom: 10px; padding-top: 10px;/*	border-bottom:3px solid #eee;*/
-}
+.cart-top-area { padding-bottom: 10px; padding-top: 10px;/*border-bottom:3px solid #eee;*/}
 .cart-table-area table { border-top: 3px solid #eee; width: 100%; }
 .cart-table-area th { text-transform: uppercase; color: #000; font: 14px/14px "Roboto Condensed", Helvetica, Arial, sans-serif; }
 .cart-table-area th, .cart-table-area td { padding: 12px 0; text-align: center; }
