create your own screen resolution popup removed

--- a/app/design/frontend/creo_mobile/default/template/pdp/action/notify.phtml
+++ b/app/design/frontend/creo_mobile/default/template/pdp/action/notify.phtml
@@ -1,5 +1,5 @@
 <?php if(Mage::getStoreConfig('pdp/design/is_notify')){ ?>
-<div class="modal fade" id="noticePopup" tabindex="-1" role="dialog" aria-hidden="true">
+<?php /*?><div class="modal fade" id="noticePopup" tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-dialog modal-md">
 	<div class="modal-content">
 	  <div class="modal-header">
@@ -11,5 +11,5 @@
 	  </div>
 	</div>
   </div>
-</div>
+</div><?php */?>
 <?php } ?>
