footer added again

--- a/app/design/frontend/creo_mobile/default/template/page/html/footer.phtml
+++ b/app/design/frontend/creo_mobile/default/template/page/html/footer.phtml
@@ -30,7 +30,7 @@
 .footer_termsconditions { float: left; width: 100%; text-align: center; padding: 10px 0;}
 </style>
 
-<?php /*?><footer id="footer">
+<footer id="footer">
 					<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 							<div class="right-area">
@@ -70,7 +70,7 @@
 							</div>
 						</div>
 					</div>
-				</footer><?php */?>
+				</footer>
 
 
         
